added design elements and finished submission question functionality

--- a/index.html
+++ b/index.html
@@ -3,16 +3,26 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="index.css">
+<link href="https://fonts.googleapis.com/css2?family=Mukta&display=swap" rel="stylesheet">
     <title>Magic 8 Ball</title>
   </head>
   <body>
 
     <div class="container">
-      <div class="adviceEye"></div>
-      <button>Advise me</button>
+      <div class="eight-ball">
+        <div class="ball-eye">
+          <!-- <h2 class="eight">8</h2> -->
+          <p></p>
+        </div>
+      </div>
+      <div>
+        <input type="text" id="question" placeholder="Ask a question!">
+        <button id="submit" value="">Advise me</button>
+      </div>
+
     </div>
 
-    <p></p>
+
     <script src="index.js"></script>
   </body>
 </html>
