incorporated css animations and fancier styling

--- a/index.html
+++ b/index.html
@@ -7,20 +7,14 @@
     <title>Magic 8 Ball</title>
   </head>
   <body>
-
-    <div class="container">
-      <div class="eight-ball">
-        <div class="ball-eye">
-          <!-- <h2 class="eight">8</h2> -->
-          <p></p>
-        </div>
-      </div>
-      <div>
-        <input type="text" id="question" placeholder="Ask a question!">
-        <button id="submit" value="">Advise me</button>
-      </div>
-
-    </div>
+    <section class="stage">
+      <figure class="ball">
+      <span class="shadow"></span>
+      <span class="iris"><p></p></span>
+    </figure>
+  </section>
+      <input type="text" id="question" placeholder="Ask a question!">
+      <button id="submit" value="">Advise me</button>
 
 
     <script src="index.js"></script>
