fixing text formatting

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <section class="stage">
       <figure class="ball">
       <span class="shadow"></span>
-      <span class="iris"><p></p></span>
+      <span id="iris" class="iris">
+        <div class="iris-container"><p>8</p></div>
+      </span>
     </figure>
   </section>
       <input type="text" id="question" placeholder="Ask a question!">
