basic animation working, 8-ball fonts and div sizes fixed

--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@
       <span id="iris" class="iris">
         <div class="iris-container"><p>8</p></div>
       </span>
+      <span id="iris-2" class="iris-2">
+        <div class="iris-container-2"><p id="advice"></p></div>
+      </span>
     </figure>
   </section>
+    <div id="input-stuff">
       <input type="text" id="question" placeholder="Ask a question!">
       <button id="submit" value="">Advise me</button>
+      <button id="again">Again</button>
+    </div>
 
 
     <script src="index.js"></script>
